将统计精度从毫秒提升到纳秒, 输出报告时再转换成毫秒

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1138,8 +1138,8 @@ Body:
   Translation: ""
 - Original: "Party loaded (%d - %s).\n"
   Translation: ""
-- Original: "Performance: %s | Trigger count = %[{PRIuPTR}] | Duration = %[{PRIuPTR}]ms\n"
-  Translation: "性能计数器: %s | 触发了 %[{PRIuPTR}] 次 | 总计耗时 = %[{PRIuPTR}]ms\n"
+- Original: "Performance counter [{CL_WHITE}]'%s'[{CL_RESET}] fired %[{PRIuPTR}] times, took [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] ms\n"
+  Translation: "性能计数器 [{CL_WHITE}]'%s'[{CL_RESET}] 触发了 %[{PRIuPTR}] 次, 总计耗时 [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] 毫秒\n"
 - Original: "Pet can't move. Holding position %d, class = %d\n"
   Translation: ""
 - Original: "Pet loaded (%d - %s).\n"
