--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1138,8 +1138,8 @@ Body:
   Translation: ""
 - Original: "Party loaded (%d - %s).\n"
   Translation: ""
-- Original: "Performance: %s | Trigger count = %[{PRIuPTR}] | Duration = %[{PRIuPTR}]ms\n"
-  Translation: "效能計數器 '%s' 觸發了 %[{PRIuPTR}] 次, 總計耗時 = %[{PRIuPTR}]ms\n"
+- Original: "Performance counter [{CL_WHITE}]'%s'[{CL_RESET}] fired %[{PRIuPTR}] times, took [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] ms\n"
+  Translation: "效能計數器 [{CL_WHITE}]'%s'[{CL_RESET}] 觸發了 %[{PRIuPTR}] 次, 總計耗時 [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] 毫秒\n"
 - Original: "Pet can't move. Holding position %d, class = %d\n"
   Translation: ""
 - Original: "Pet loaded (%d - %s).\n"
