--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -280,6 +280,8 @@ Body:
   Translation: ""
 - Original: "%s: %s: Invalid %s %d.\n"
   Translation: ""
+- Original: "%s: Caller: %s Line: %[{PRIuPTR}]\n"
+  Translation: "%s: 调用者路径: %s 行号: %[{PRIuPTR}]\n"
 - Original: "%s: Configuration Error: The char server (%s) and map server (%s) belong to different subnetworks!\n"
   Translation: ""
 - Original: "%s: Could not get file version, defaulting to '%s'\n"
@@ -300,6 +302,8 @@ Body:
   Translation: ""
 - Original: "%s: Skill '%d' isn't created in 'skill_db.txt' yet. Creating dummy value...\n"
   Translation: ""
+- Original: "%s: The counter name '%s' is not exists, please initialize before using.\n"
+  Translation: "%s: 性能计数器 '%s' 不存在, 在使用之前请先初始化它.\n"
 - Original: "%s: Title System it requires PACKETVER 2015-05-13 or newer...\n"
   Translation: ""
 - Original: "%s: Too many subnets defined, skipping line %d...\n"
@@ -1134,6 +1138,8 @@ Body:
   Translation: ""
 - Original: "Party loaded (%d - %s).\n"
   Translation: ""
+- Original: "Performance counter [{CL_WHITE}]'%s'[{CL_RESET}] fired %[{PRIuPTR}] times, took [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] ms\n"
+  Translation: "性能计数器 [{CL_WHITE}]'%s'[{CL_RESET}] 触发了 %[{PRIuPTR}] 次, 总计耗时 [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] 毫秒\n"
 - Original: "Pet can't move. Holding position %d, class = %d\n"
   Translation: ""
 - Original: "Pet loaded (%d - %s).\n"
@@ -1961,6 +1967,8 @@ Body:
 - Original: "buildin_getrandgroupitem: Invalid group id (%d)!\n"
   Translation: ""
 - Original: "buildin_getrandomoptinfo: Invalid attribute type %d (Max %d).\n"
+  Translation: ""
+- Original: "buildin_getsameipinfo: Invalid map name %s.\n"
   Translation: ""
 - Original: "buildin_getsameipinfo: ip address must be string variable\n"
   Translation: ""
