翻译 conf/grf-files.txt 配置文件中的注释并补充大量说明

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -27,8 +27,8 @@ party_share_level: 15
 // 2. 系统语言为繁体中文时, auto 将会自动变成 big5 编码
 // 3. 其他语言将会使用数据库 `character_set_database` 变量指定的编码
 // 
-// 若运行熊猫模拟器的操作系统语言和你期望的游戏内语言不一致,
-// 那么建议在此明确指定 gbk 或者 big5, 而不是 auto
+// 若运行熊猫模拟器的操作系统语言和你期望开服的游戏内语言不一致,
+// 那么建议在此明确指定 gbk 或者 big5 编码, 而不是 auto
 default_codepage: auto
 
 // 接下来涉及到的几个 MySQL 数据库服务器的设置,
@@ -122,7 +122,7 @@ mysql_reconnect_count: 1
 // 
 // 注意注意: 请不要改变接下来的这些设置,
 // 除非您对数据库非常的了解, 并且知道自己在做什么事情.
-// 如果没有充分的理由建议您保持默认, 不要去修改他们.
+// 若没有充分的理由建议您保持默认, 不要去修改他们.
 // 
 // >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
 // >>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<>>><<<
