修正公会旗帜获取图标时提示 map_getmapflag 错误的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -547,7 +547,7 @@ Body:
 - Original: "Clan %d:%s specifies higher capacity (%d) than MAX_CLAN (%d)\n"
   Translation: ""
 - Original: "Clan loaded (%d - %s)\n"
-  Translation: "已加载部落数据 (部落编号为: %d - 部落名称为: %s)\n"
+  Translation: "已加载部落数据 (部落编号: %d - 部落名称: %s)\n"
 - Original: "Class %s (%d) does not have a base exp table.\n"
   Translation: ""
 - Original: "Class %s (%d) does not have a job exp table.\n"
@@ -761,7 +761,7 @@ Body:
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs.\n"
-  Translation: "[{CL_WHITE}]%s[{CL_RESET}] 事件已经在 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 上被触发执行.\n"
+  Translation: "事件 [{CL_WHITE}]%s[{CL_RESET}] 已经在 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 上被执行.\n"
 - Original: "Existing map cache not found, forcing rebuild mode\n"
   Translation: ""
 - Original: "Failed to Resolve Char Server Address! (%s)\n"
@@ -855,11 +855,11 @@ Body:
 - Original: "Guild Storage has been saved (GID: %d)\n"
   Translation: ""
 - Original: "Guild Unloaded (%d - %s)\n"
-  Translation: ""
+  Translation: "已卸载公会数据 (公会编号: %d - 公会名称: %s)\n"
 - Original: "Guild load request (%d)...\n"
   Translation: ""
 - Original: "Guild loaded (%d - %s)\n"
-  Translation: ""
+  Translation: "已加载公会数据 (公会编号: %d - 公会名称: %s)\n"
 - Original: "Homunculus '%d' has been deleted.\n"
   Translation: ""
 - Original: "Homunculus data delete failure\n"
