--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -547,7 +547,7 @@ Body:
 - Original: "Clan %d:%s specifies higher capacity (%d) than MAX_CLAN (%d)\n"
   Translation: ""
 - Original: "Clan loaded (%d - %s)\n"
-  Translation: "已載入部落資料 (部落編號為: %d - 部落名稱為: %s)\n"
+  Translation: "已載入部落資料 (部落編號: %d - 部落名稱: %s)\n"
 - Original: "Class %s (%d) does not have a base exp table.\n"
   Translation: ""
 - Original: "Class %s (%d) does not have a job exp table.\n"
@@ -761,7 +761,7 @@ Body:
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs.\n"
-  Translation: "[{CL_WHITE}]%s[{CL_RESET}] 事件已經在 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 上被觸發執行.\n"
+  Translation: "事件 [{CL_WHITE}]%s[{CL_RESET}] 已經在 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 上被執行.\n"
 - Original: "Existing map cache not found, forcing rebuild mode\n"
   Translation: ""
 - Original: "Failed to Resolve Char Server Address! (%s)\n"
@@ -855,11 +855,11 @@ Body:
 - Original: "Guild Storage has been saved (GID: %d)\n"
   Translation: ""
 - Original: "Guild Unloaded (%d - %s)\n"
-  Translation: ""
+  Translation: "已解除安裝公會資料 (公會編號: %d - 公會名稱: %s)\n"
 - Original: "Guild load request (%d)...\n"
   Translation: ""
 - Original: "Guild loaded (%d - %s)\n"
-  Translation: ""
+  Translation: "已載入公會資料 (公會編號: %d - 公會名稱: %s)\n"
 - Original: "Homunculus '%d' has been deleted.\n"
   Translation: ""
 - Original: "Homunculus data delete failure\n"
