屏蔽 YAML 加载中的记录总数, 使载入过程的展现更好一些

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -255,7 +255,7 @@ Body:
 - Original: "%[{PRIuPTR}] '%s' events.\n"
   Translation: ""
 - Original: "%d maps now in cache\n"
-  Translation: "目前地图缓存文件中共有 %d 张地图.\n"
+  Translation: "目前地图缓存文件中共有 [{CL_WHITE}]%d[{CL_RESET}] 张地图.\n"
 - Original: "%d request account info for %d (type %d)\n"
   Translation: ""
 - Original: "%s"
@@ -569,9 +569,9 @@ Body:
 - Original: "Closed connection from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已关闭与 '[{CL_WHITE}]%s[{CL_RESET}]' 建立的连接.\n"
 - Original: "Closing map cache: %s\n"
-  Translation: "正在关闭地图缓存文件: %s\n"
+  Translation: "正在关闭地图缓存 (Map Cache) 文件: %s\n"
 - Original: "Closing map list: %s\n"
-  Translation: "正在关闭地图列表文件: %s\n"
+  Translation: "正在关闭地图列表 (Map Index) 文件: %s\n"
 - Original: "Configuration file (%s) not found.\n"
   Translation: ""
 - Original: "Configuration file not found: %s.\n"
@@ -761,7 +761,7 @@ Body:
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs.\n"
-  Translation: "事件 [{CL_WHITE}]%s[{CL_RESET}] 已经在 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 上被执行.\n"
+  Translation: "事件 '[{CL_WHITE}]%s[{CL_RESET}]' 已经在 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 上被执行.\n"
 - Original: "Existing map cache not found, forcing rebuild mode\n"
   Translation: ""
 - Original: "Failed to Resolve Char Server Address! (%s)\n"
@@ -805,7 +805,7 @@ Body:
 - Original: "Filling the missing values with the last exp entry.\n"
   Translation: ""
 - Original: "Finalizing grfio\n"
-  Translation: "正在结束并释放 GRF 文件读写模块\n"
+  Translation: "正在释放 GRF 文件读写模块...\n"
 - Original: "Finished Reading [{CL_GREEN}]GeoIP[{CL_RESET}] Database.\n"
   Translation: "已读取 [{CL_GREEN}]GeoIP[{CL_RESET}] 地缘数据库.\n"
 - Original: "Finished reading %s.\n"
@@ -875,7 +875,7 @@ Body:
 - Original: "Incorrect use of 'close' command!\n"
   Translation: ""
 - Original: "Initializing grfio with %s\n"
-  Translation: "使用 '%s' 配置文件来初始化 GRF 文件读写模块.\n"
+  Translation: "使用 '%s' 初始化 GRF 文件读写模块.\n"
 - Original: "Invalid 'packet_keys' in configure file %s, use default packet_keys...\n"
   Translation: ""
 - Original: "Invalid Msg Len from account %d.\n"
@@ -955,7 +955,7 @@ Body:
 - Original: "Loading NPCs...\r"
   Translation: ""
 - Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已读取 [%[{PRIdPTR}]/%[{PRIdPTR}]] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+  Translation: "已读取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在加载地图 (使用 %s 中的地图缓存)...\n"
 - Original: "Loading maps (using GRF files)...\n"
@@ -1133,9 +1133,9 @@ Body:
 - Original: "Open [{CL_WHITE}]README.md[{CL_RESET}] for more information.\n"
   Translation: ""
 - Original: "Opening map cache: %s\n"
-  Translation: "正在打开地图缓存文件: %s\n"
+  Translation: "正在打开地图缓存 (Map Cache) 文件: %s\n"
 - Original: "Opening map list: %s\n"
-  Translation: "正在打开地图列表文件: %s\n"
+  Translation: "正在打开地图列表 (Map Index) 文件: %s\n"
 - Original: "Options:\n"
   Translation: ""
 - Original: "Over 65k instances of '%s' script are being run!\n"
@@ -1247,7 +1247,7 @@ Body:
 - Original: "Saved char %d - %s:%s.\n"
   Translation: "已保存角色编号为: %d, 角色名为: %s 的%s 数据.\n"
 - Original: "Saved guild (%d - %s):%s\n"
-  Translation: ""
+  Translation: "已保存公会编号为: %d, 公会名称: %s 的%s 数据.\n"
 - Original: "Saved guild castle (%d)\n"
   Translation: ""
 - Original: "Saving %d bonus script for CID=%d\n"
