--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -255,7 +255,7 @@ Body:
 - Original: "%[{PRIuPTR}] '%s' events.\n"
   Translation: ""
 - Original: "%d maps now in cache\n"
-  Translation: "目前地圖快取檔案中共有 %d 張地圖.\n"
+  Translation: "目前地圖快取檔案中共有 [{CL_WHITE}]%d[{CL_RESET}] 張地圖.\n"
 - Original: "%d request account info for %d (type %d)\n"
   Translation: ""
 - Original: "%s"
@@ -569,9 +569,9 @@ Body:
 - Original: "Closed connection from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已關閉與 '[{CL_WHITE}]%s[{CL_RESET}]' 建立的連線.\n"
 - Original: "Closing map cache: %s\n"
-  Translation: "正在關閉地圖快取檔案: %s\n"
+  Translation: "正在關閉地圖快取 (Map Cache) 檔案: %s\n"
 - Original: "Closing map list: %s\n"
-  Translation: "正在關閉地圖列表檔案: %s\n"
+  Translation: "正在關閉地圖列表 (Map Index) 檔案: %s\n"
 - Original: "Configuration file (%s) not found.\n"
   Translation: ""
 - Original: "Configuration file not found: %s.\n"
@@ -761,7 +761,7 @@ Body:
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs.\n"
-  Translation: "事件 [{CL_WHITE}]%s[{CL_RESET}] 已經在 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 上被執行.\n"
+  Translation: "事件 '[{CL_WHITE}]%s[{CL_RESET}]' 已經在 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 上被執行.\n"
 - Original: "Existing map cache not found, forcing rebuild mode\n"
   Translation: ""
 - Original: "Failed to Resolve Char Server Address! (%s)\n"
@@ -805,7 +805,7 @@ Body:
 - Original: "Filling the missing values with the last exp entry.\n"
   Translation: ""
 - Original: "Finalizing grfio\n"
-  Translation: "正在結束並釋放 GRF 檔案讀寫模組\n"
+  Translation: "正在釋放 GRF 檔案讀寫模組...\n"
 - Original: "Finished Reading [{CL_GREEN}]GeoIP[{CL_RESET}] Database.\n"
   Translation: "已讀取 [{CL_GREEN}]GeoIP[{CL_RESET}] 地緣資料庫.\n"
 - Original: "Finished reading %s.\n"
@@ -875,7 +875,7 @@ Body:
 - Original: "Incorrect use of 'close' command!\n"
   Translation: ""
 - Original: "Initializing grfio with %s\n"
-  Translation: "使用 '%s' 配置檔案來初始化 GRF 檔案讀寫模組.\n"
+  Translation: "使用 '%s' 初始化 GRF 檔案讀寫模組.\n"
 - Original: "Invalid 'packet_keys' in configure file %s, use default packet_keys...\n"
   Translation: ""
 - Original: "Invalid Msg Len from account %d.\n"
@@ -955,7 +955,7 @@ Body:
 - Original: "Loading NPCs...\r"
   Translation: ""
 - Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已讀取 [%[{PRIdPTR}]/%[{PRIdPTR}]] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+  Translation: "已讀取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在載入地圖 (使用 %s 中的地圖快取)...\n"
 - Original: "Loading maps (using GRF files)...\n"
@@ -1133,9 +1133,9 @@ Body:
 - Original: "Open [{CL_WHITE}]README.md[{CL_RESET}] for more information.\n"
   Translation: ""
 - Original: "Opening map cache: %s\n"
-  Translation: "正在開啟地圖快取檔案: %s\n"
+  Translation: "正在開啟地圖快取 (Map Cache) 檔案: %s\n"
 - Original: "Opening map list: %s\n"
-  Translation: "正在開啟地圖列表檔案: %s\n"
+  Translation: "正在開啟地圖列表 (Map Index) 檔案: %s\n"
 - Original: "Options:\n"
   Translation: ""
 - Original: "Over 65k instances of '%s' script are being run!\n"
@@ -1247,7 +1247,7 @@ Body:
 - Original: "Saved char %d - %s:%s.\n"
   Translation: "已儲存角色編號為: %d, 角色名為: %s 的%s 資料.\n"
 - Original: "Saved guild (%d - %s):%s\n"
-  Translation: ""
+  Translation: "已儲存公會編號為: %d, 公會名稱: %s 的%s 資料.\n"
 - Original: "Saved guild castle (%d)\n"
   Translation: ""
 - Original: "Saving %d bonus script for CID=%d\n"
