优化 storagegetitem 脚本指令的实现方式

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -589,7 +589,7 @@ Body:
 - Original: "Connection Closed. No map server available that has a major city, and unable to find map-server for '%s'.\n"
   Translation: ""
 - Original: "Connection Closed. No map servers available.\n"
-  Translation: ""
+  Translation: "最后的地图服务器连接已关闭. 当前没有可用的地图服务器.\n"
 - Original: "Connection of the account '%s' accepted.\n"
   Translation: "已接受账号为 '%s' 的连接建立请求.\n"
 - Original: "Connection of the char-server '%s' REFUSED.\n"
@@ -613,9 +613,9 @@ Body:
 - Original: "Connection request of the char-server '%s' @ %u.%u.%u.%u:%u (account: '%s', ip: '%s')\n"
   Translation: "发现角色服务器 '%s' 从 %u.%u.%u.%u:%u 请求建立连接 (内部通讯账号: '%s', IP地址: '%s')\n"
 - Original: "Connection to Char Server lost.\n\n"
-  Translation: ""
+  Translation: "丢失与角色服务器的连接.\n\n"
 - Original: "Connection to Login Server lost.\n\n"
-  Translation: ""
+  Translation: "丢失与登录服务器的连接.\n\n"
 - Original: "Connection to char-server failed %d, please check conf/import/map_conf userid and passwd.\n"
   Translation: ""
 - Original: "Console Commands are enabled.\n"
@@ -1249,7 +1249,7 @@ Body:
 - Original: "Saved guild (%d - %s):%s\n"
   Translation: "已保存公会编号为: %d, 公会名称: %s 的%s 数据.\n"
 - Original: "Saved guild castle (%d)\n"
-  Translation: ""
+  Translation: "已保存公会城堡信息 (城堡编号: %d)\n"
 - Original: "Saving %d bonus script for CID=%d\n"
   Translation: ""
 - Original: "Saving storage data for AID=%d.\n"
@@ -1453,7 +1453,7 @@ Body:
 - Original: "User '%s' is already online - Rejected.\n"
   Translation: "账号 '%s' 已经在线 - 拒绝本次登录, 并将此账号踢下线.\n"
 - Original: "User Count: %d (Server: %d)\n"
-  Translation: ""
+  Translation: "在线玩家数量: %d (地图服务器 %d 送来的数据)\n"
 - Original: "Using SQL dbs: %s\n"
   Translation: "使用 MySQL 数据库中的 db 信息: %s\n"
 - Original: "Using packet version: [{CL_WHITE}]%d[{CL_RESET}].\n"
