--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -589,7 +589,7 @@ Body:
 - Original: "Connection Closed. No map server available that has a major city, and unable to find map-server for '%s'.\n"
   Translation: ""
 - Original: "Connection Closed. No map servers available.\n"
-  Translation: ""
+  Translation: "最後的地圖伺服器連線已關閉. 當前沒有可用的地圖伺服器.\n"
 - Original: "Connection of the account '%s' accepted.\n"
   Translation: "已接受賬號為 '%s' 的連線建立請求.\n"
 - Original: "Connection of the char-server '%s' REFUSED.\n"
@@ -613,9 +613,9 @@ Body:
 - Original: "Connection request of the char-server '%s' @ %u.%u.%u.%u:%u (account: '%s', ip: '%s')\n"
   Translation: "發現角色伺服器 '%s' 從 %u.%u.%u.%u:%u 請求建立連線 (內部通訊賬號: '%s', IP地址: '%s')\n"
 - Original: "Connection to Char Server lost.\n\n"
-  Translation: ""
+  Translation: "丟失與角色伺服器的連線.\n\n"
 - Original: "Connection to Login Server lost.\n\n"
-  Translation: ""
+  Translation: "丟失與登入伺服器的連線.\n\n"
 - Original: "Connection to char-server failed %d, please check conf/import/map_conf userid and passwd.\n"
   Translation: ""
 - Original: "Console Commands are enabled.\n"
@@ -1249,7 +1249,7 @@ Body:
 - Original: "Saved guild (%d - %s):%s\n"
   Translation: "已儲存公會編號為: %d, 公會名稱: %s 的%s 資料.\n"
 - Original: "Saved guild castle (%d)\n"
-  Translation: ""
+  Translation: "已儲存公會城堡資訊 (城堡編號: %d)\n"
 - Original: "Saving %d bonus script for CID=%d\n"
   Translation: ""
 - Original: "Saving storage data for AID=%d.\n"
@@ -1453,7 +1453,7 @@ Body:
 - Original: "User '%s' is already online - Rejected.\n"
   Translation: "賬號 '%s' 已經線上 - 拒絕本次登入, 並將此賬號踢下線.\n"
 - Original: "User Count: %d (Server: %d)\n"
-  Translation: ""
+  Translation: "線上玩家數量: %d (地圖伺服器 %d 送來的資料)\n"
 - Original: "Using SQL dbs: %s\n"
   Translation: "使用 MySQL 資料庫中的 db 資訊: %s\n"
 - Original: "Using packet version: [{CL_WHITE}]%d[{CL_RESET}].\n"
