使物品特殊属性数据库能够屏蔽特定场景下的道具外观

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -543,7 +543,7 @@ Body:
 - Original: "Characters per Account: '%d'.\n"
   Translation: "每个帐号最多只能创建 '%d' 个角色 (若为则 0 表示无限制).\n"
 - Original: "Checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets...\n"
-  Translation: "正在校验 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据有效性...\n"
+  Translation: "正在校验 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据...\n"
 - Original: "Clan %d:%s specifies higher capacity (%d) than MAX_CLAN (%d)\n"
   Translation: ""
 - Original: "Clan loaded (%d - %s)\n"
@@ -715,7 +715,7 @@ Body:
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
   Translation: "终端信息翻译诊断信息: 语言信息: %s | 位置编码: %s\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
-  Translation: "已成功完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据有效性校验.\n"
+  Translation: "已完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则表示检测通过.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
