--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -543,7 +543,7 @@ Body:
 - Original: "Characters per Account: '%d'.\n"
   Translation: "每個帳號最多隻能建立 '%d' 個角色 (若為則 0 表示無限制).\n"
 - Original: "Checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets...\n"
-  Translation: "正在校驗 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料有效性...\n"
+  Translation: "正在校驗 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料...\n"
 - Original: "Clan %d:%s specifies higher capacity (%d) than MAX_CLAN (%d)\n"
   Translation: ""
 - Original: "Clan loaded (%d - %s)\n"
@@ -715,7 +715,7 @@ Body:
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
   Translation: "終端資訊翻譯診斷資訊: 語言資訊: %s | 位置編碼: %s\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
-  Translation: "已成功\完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料有效性校驗.\n"
+  Translation: "已完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則表示檢測通過.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
