--- a/db/item_properties.yml
+++ b/db/item_properties.yml
@@ -26,6 +26,19 @@
 # 若填 3 则表示: 避免该物品被主动使用或作为技能道具而消耗
 #
 ###########################################################################
+#
+# ControlViewID
+# 可选节点, 控制是否需要处理隐藏此道具的外观编号
+#
+# 可选子节点: InvisibleWhenISee
+#   若设置为 true 表示: 当我自己在装备面板中查看装备时, 隐藏它的外观编号
+#   没有此字段, 或设为 false 表示: 不隐藏它的外观编号
+#
+# 可选子节点: InvisibleWhenTheySee
+#   若设置为 true 表示: 当其他人查看我的装备时, 隐藏它的外观编号
+#   没有此字段, 或设为 false 表示: 不隐藏它的外观编号
+#
+###########################################################################
 
 #--------------------------------------------------------------------------
 # 护身符道具介绍
@@ -46,6 +59,9 @@ Header:
 Body:
 #  - ItemID: 601
 #    Property: 1
+#    ControlViewID:
+#      InvisibleWhenISee: false
+#      InvisibleWhenTheySee: false
 
 Footer:
   Imports:
