使物品特殊属性数据库能够屏蔽特定场景下的道具外观 (#236)

--- a/db/item_properties.yml
+++ b/db/item_properties.yml
@@ -16,7 +16,7 @@
 ###########################################################################
 #
 # Property
-# 特殊属性标记, 用来标出物品有什么特殊属性
+# 可选节点, 用来标出物品有什么特殊属性
 #
 # 1 - 表示避免物品被玩家主动使用而消耗
 # 2 - 避免物品被作为发动技能的必要道具而消耗
@@ -24,6 +24,19 @@
 #
 # 这是位运算字段, 若想同时设置 1 和 2 只需要把他们相加, 直接填写 3 即可
 # 若填 3 则表示: 避免该物品被主动使用或作为技能道具而消耗
+#
+###########################################################################
+#
+# ControlViewID
+# 可选节点, 控制是否需要处理隐藏此道具的外观编号
+#
+# 可选子节点: InvisibleWhenISee
+#   若设置为 true 表示: 当我自己在装备面板中查看装备时, 隐藏它的外观编号
+#   没有此字段, 或设为 false 表示: 不隐藏它的外观编号
+#
+# 可选子节点: InvisibleWhenTheySee
+#   若设置为 true 表示: 当其他人查看我的装备时, 隐藏它的外观编号
+#   没有此字段, 或设为 false 表示: 不隐藏它的外观编号
 #
 ###########################################################################
 
@@ -44,8 +57,11 @@ Header:
   Version: 1
 
 Body:
-#  - ItemID: 601
-#    Property: 1
+#  - ItemID: 2207
+#    Property: 0
+#    ControlViewID:
+#      InvisibleWhenISee: false
+#      InvisibleWhenTheySee: false
 
 Footer:
   Imports:
