使战斗配置选项可限制玩家在 PVP 地图上的最大攻速

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -56,4 +56,18 @@ force_identified: 0
 // rAthena 默认禁止在坐骑的时候使用“延迟消耗类物品”, 因此该选项的默认值为 64
 cashmount_useitem_limit: 64
 
+// 玩家在 PVP 地图上的最大攻速限制 (全职业限制)
+//
+// 若玩家根据 conf/player.conf 的 max_aspd、max_third_aspd、
+// max_extended_aspd 计算出来的最大攻速, 比此选项设置的值更加小,
+// 则以更小的攻速限制为准.
+// 
+// 假设此选项设置为 191, 且 conf/player.conf 的 max_aspd 为 190 的话
+// 若你的职业是个剑士, 且处于 PVP 地图, 那么你的最大攻速将是 190,
+// 而不是此选项设置的 191 (因为 max_aspd 的限制 190 更小)
+//
+// 若一张地图同时启用了 PVP 和 GVG 的话, 则以 GVG 的攻速限制优先
+// 若设置为 0 则关闭此限制, 最大值可填写 199
+max_aspd_for_pvp: 0
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
