使战斗配置选项可限制玩家在 GVG 地图上的最大攻速

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -58,6 +58,8 @@ cashmount_useitem_limit: 64
 
 // 玩家在 PVP 地图上的最大攻速限制 (全职业限制)
 //
+// 提示: 这里的 GVG 地图是指拥有 MF_PVP 标记的地图.
+//
 // 若玩家根据 conf/player.conf 的 max_aspd、max_third_aspd、
 // max_extended_aspd 计算出来的最大攻速, 比此选项设置的值更加小,
 // 则以更小的攻速限制为准.
@@ -69,5 +71,24 @@ cashmount_useitem_limit: 64
 // 若一张地图同时启用了 PVP 和 GVG 的话, 则以 GVG 的攻速限制优先
 // 若设置为 0 则关闭此限制, 最大值可填写 199
 max_aspd_for_pvp: 0
+
+// 玩家在 GVG 地图上的最大攻速限制 (全职业限制)
+// 
+// 提示: 这里的 GVG 地图是指拥有 MF_GVG/MF_GVG_TE 标记的地图.
+// 
+// 公会城堡地图在开启 GVG 之前, 是没有 MF_GVG/MF_GVG_TE 地图标记的,
+// 因此在没有开启 GVG 的时候跑去公会城堡地图, 不会受此处限制.
+//
+// 若玩家根据 conf/player.conf 的 max_aspd、max_third_aspd、
+// max_extended_aspd 计算出来的最大攻速, 比此选项设置的值更加小,
+// 则以更小的攻速限制为准.
+// 
+// 假设此选项设置为 191, 且 conf/player.conf 的 max_aspd 为 190 的话
+// 若你的职业是个剑士, 且处于 GVG 地图, 那么你的最大攻速将是 190,
+// 而不是此选项设置的 191 (因为 max_aspd 的限制 190 更小)
+//
+// 若一张地图同时启用了 PVP 和 GVG 的话, 则以 GVG 的攻速限制优先
+// 若设置为 0 则关闭此限制, 最大值可填写 199
+max_aspd_for_gvg: 0
 
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
