翻译一些比较常见的终端报错信息

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -572,6 +572,8 @@ Body:
   Translation: "正在关闭地图缓存 (Map Cache) 文件: %s\n"
 - Original: "Closing map list: %s\n"
   Translation: "正在关闭地图列表 (Map Index) 文件: %s\n"
+- Original: "Compiled from Git Hash: [{CL_WHITE}]'%s'[{CL_RESET}] at [{CL_WHITE}]'%s'[{CL_RESET}] branch.\n"
+  Translation: "编译此程序的代码版本为: [{CL_WHITE}]'%s'[{CL_RESET}] | 代码分支: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Configuration file (%s) not found.\n"
   Translation: ""
 - Original: "Configuration file not found: %s.\n"
@@ -703,10 +705,6 @@ Body:
 - Original: "Delay delayfix = %d\n"
   Translation: ""
 - Original: "Deleting channel %s alias %s type %d\n"
-  Translation: ""
-- Original: "Deploy %s is failed.\n"
-  Translation: ""
-- Original: "Deploy %s is successful.\n"
   Translation: ""
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
   Translation: "探测到 [{CL_WHITE}]'%s'[{CL_RESET}] 连接所指向的目标数据库当前的字符集为 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
@@ -1301,7 +1299,7 @@ Body:
 - Original: "Skill %s is unknown.\n"
   Translation: ""
 - Original: "Skill '%d' is undefined! %s:%d::%s\n"
-  Translation: ""
+  Translation: "编号为 '%d' 的技能未定义或不存在! %s:%d::%s\n"
 - Original: "Skill Level up failed. ID:%d idx:%d (CID=%d. AID=%d)\n"
   Translation: ""
 - Original: "Skill name for Abra skill ID %hu is not known.\n"
@@ -1637,7 +1635,7 @@ Body:
 - Original: "at %s:%lu -  self is NULL\n"
   Translation: ""
 - Original: "at %s:%lu - %s\n"
-  Translation: ""
+  Translation: "错误发生于 %s 的第 %lu 行, 最后执行的 SQL 查询语句是: %s\n"
 - Original: "at %s:%lu - self is NULL\n"
   Translation: ""
 - Original: "atcommand_basecommands: duplicate ACMD_DEF for '%s'.\n"
@@ -1660,8 +1658,6 @@ Body:
   Translation: ""
 - Original: "bg_on_ready_loopback: Can't find battleground %d in the battlegrounds database.\n"
   Translation: ""
-- Original: "bg_queue_join: Tried to join non-existent player.\n."
-  Translation: ""
 - Original: "bg_queue_join_multi: Tried to join non-existent player\n."
   Translation: ""
 - Original: "bg_queue_leave: Couldn't find player %s in battlegrounds queue.\n"
@@ -1669,8 +1665,6 @@ Body:
 - Original: "bg_queue_on_ready: Couldn't find battleground ID %d in battlegrounds database.\n"
   Translation: ""
 - Original: "bg_queue_start_battleground: Could not find battleground ID %d in battlegrounds database.\n"
-  Translation: ""
-- Original: "bq_queue_join: Could not find battleground \"%s\" requested by %s (AID: %d / CID: %d)\n"
   Translation: ""
 - Original: "bq_queue_join_multi: Could not find battleground \"%s\" requested by %s (AID: %d / CID: %d)\n"
   Translation: ""
@@ -2438,6 +2432,10 @@ Body:
   Translation: ""
 - Original: "buildin_statuscheck: Invalid status type given (%d).\n"
   Translation: ""
+- Original: "buildin_storagegetitem: Nonexistant item %d requested.\n"
+  Translation: ""
+- Original: "buildin_storagegetitem: Nonexistant item %s requested.\n"
+  Translation: ""
 - Original: "buildin_strcharinfo: unknown parameter.\n"
   Translation: ""
 - Original: "buildin_successrefitem: No item equipped at pos %d (CID=%d/AID=%d).\n"
@@ -3029,7 +3027,7 @@ Body:
 - Original: "itemdb_pc_get_itemgroup: Invalid group id '%d' specified.\n"
   Translation: ""
 - Original: "itemdb_read_buyingstore: Invalid item id %hu.\n"
-  Translation: ""
+  Translation: "itemdb_read_buyingstore: 无效的物品编号 %hu, 请确认是否已定义此物品.\n"
 - Original: "itemdb_read_buyingstore: Non-stackable item id %hu cannot be enabled for buying store.\n"
   Translation: ""
 - Original: "itemdb_read_combos(#1): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
@@ -3041,11 +3039,11 @@ Body:
 - Original: "itemdb_read_combos: Insufficient columns in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %d, skipping.\n"
-  Translation: ""
+  Translation: "itemdb_read_combos: 第 %d 行数据 (位于: \"%s\") 由于包含了无效的物品编号 %d, 已跳过.\n"
 - Original: "itemdb_read_combos: line %d of \"%s\" doesn't have enough items to make for a combo (min:2), skipping.\n"
   Translation: ""
 - Original: "itemdb_read_flag: Invalid item id %hu\n"
-  Translation: ""
+  Translation: "itemdb_read_flag: 无效的物品编号 %hu, 请确认是否已定义此物品.\n"
 - Original: "itemdb_read_group: Insufficient columns (found %d, need at least 3).\n"
   Translation: ""
 - Original: "itemdb_read_group: Invalid group ID '%s'\n"
@@ -3061,9 +3059,9 @@ Body:
 - Original: "itemdb_read_group: Random item must have a probability. Group '%s'\n"
   Translation: ""
 - Original: "itemdb_read_group: Unknown group constant \"%s\".\n"
-  Translation: ""
+  Translation: "itemdb_read_group: 无效的分组常量: \"%s\".\n"
 - Original: "itemdb_read_itemavail: Invalid item id %hu.\n"
-  Translation: ""
+  Translation: "itemdb_read_itemavail: 无效的物品编号: %hu, 请确认是否已定义此物品.\n"
 - Original: "itemdb_read_itemdelay: Invalid delay %d for item id %hu.\n"
   Translation: ""
 - Original: "itemdb_read_itemdelay: Invalid item id %hu.\n"
@@ -3077,9 +3075,9 @@ Body:
 - Original: "itemdb_read_itemtrade: Invalid trading mask %hu for item id %hu.\n"
   Translation: ""
 - Original: "itemdb_read_noequip: Invalid item id %hu.\n"
-  Translation: ""
+  Translation: "itemdb_read_noequip: 无效的物品编号 %hu, 请确认是否已定义此物品.\n"
 - Original: "itemdb_read_nouse: Invalid item id %hu.\n"
-  Translation: ""
+  Translation: "itemdb_read_nouse: 无效的物品编号 %hu, 请确认是否已定义此物品.\n"
 - Original: "itemdb_read_randomopt(#1): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_randomopt(#2): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
@@ -3099,11 +3097,11 @@ Body:
 - Original: "itemdb_read_randomopt_group: Invalid random group id '%s' in column %d!\n"
   Translation: ""
 - Original: "itemdb_read_randopt: Unknown random option constant \"%s\".\n"
-  Translation: ""
+  Translation: "itemdb_read_randopt: 无效的随机属性常量: \"%s\".\n"
 - Original: "itemdb_read_stack: Item id '%hu' is not stackable.\n"
   Translation: ""
 - Original: "itemdb_read_stack: Unknown item id '%hu'.\n"
-  Translation: ""
+  Translation: "itemdb_read_stack: 无效的物品编号 %hu, 请确认是否已定义此物品.\n"
 - Original: "itemdb_readdb: File not found \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_readdb: Insufficient columns in line %d of \"%s\" (item with id %d), skipping.\n"
@@ -3351,7 +3349,7 @@ Body:
 - Original: "mob_readdb_drop: Removed item '%hu' from monster '%hu'.\n"
   Translation: ""
 - Original: "mob_readdb_group: Invalid random monster group '%s'\n"
-  Translation: ""
+  Translation: "mob_readdb_group: 无效的随机魔物分组: '%s'\n"
 - Original: "mob_readdb_itemratio: Invalid item id %hu.\n"
   Translation: ""
 - Original: "mob_readdb_itemratio: Invalid monster with ID %hu (Item:%hu Col:%d).\n"
@@ -3853,7 +3851,7 @@ Body:
 - Original: "pc_readdb_skilltree: Unable to load requirement skill %hu into job %d's tree."
   Translation: ""
 - Original: "pc_readdb_skilltree: Unable to load skill %hu into job %d's tree.\n"
-  Translation: ""
+  Translation: "pc_readdb_skilltree: 无法加载编号为 %hu 的技能到职业编号为 %d 的技能树中.\n"
 - Original: "pc_readdb_skilltree: Unable to load skill %hu into job %d's tree. Maximum number of skills per job has been reached.\n"
   Translation: ""
 - Original: "pc_readparam: Attempt to read unknown parameter '%lld'.\n"
@@ -4178,6 +4176,8 @@ Body:
   Translation: ""
 - Original: "script_setdragon: Unknown Color %d used; changing to green (1)\n"
   Translation: ""
+- Original: "script_storagegetitembound: Not a correct bound type! Type=%d\n"
+  Translation: ""
 - Original: "searchstore_click: Received request with item %hu of account %d, which is not part of current result set (account_id=%d, char_id=%d).\n"
   Translation: ""
 - Original: "searchstore_click: Unknown search store effect %u (account_id=%d).\n"
@@ -4271,7 +4271,7 @@ Body:
 - Original: "skill_parse_row_createarrowdb: Maximum db entries reached.\n"
   Translation: ""
 - Original: "skill_parse_row_producedb: Invalid item %d.\n"
-  Translation: ""
+  Translation: "skill_parse_row_producedb: 无效的物品编号 %d, 请确认是否已定义此物品.\n"
 - Original: "skill_parse_row_producedb: Maximum db entries reached.\n"
   Translation: ""
 - Original: "skill_parse_row_producedb: Product list with ID %d removed from list.\n"
@@ -4357,7 +4357,7 @@ Body:
 - Original: "sv_parse_next: unknown escape sequence \\%c\n"
   Translation: ""
 - Original: "sv_readdb: Could not process contents of line %d of \"%s\".\n"
-  Translation: ""
+  Translation: "sv_readdb: 无法处理第 %d 行的数据, 位于: \"%s\".\n"
 - Original: "sv_readdb: Insufficient columns in line %d of \"%s\" (found %d, need at least %d).\n"
   Translation: ""
 - Original: "sv_readdb: Reached the maximum allowed number of entries (%d) when parsing file \"%s\".\n"
