实现 atcmd_no_permission 选项, 用于控制没有权限的玩家执行管理员指令时处理策略

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -91,4 +91,17 @@ max_aspd_for_pvp: 0
 // 若设置为 0 则关闭此限制, 最大值可填写 199
 max_aspd_for_gvg: 0
 
+// 当没有权限的玩家执行了 GM 指令时的处理策略
+// 
+// 0 - 不处理, 当做普通聊天内容发出去
+// 1 - 给予无权限的提示, 不会将指令当做聊天信息发出去 (默认值)
+// 2 - 不提示, 也不当做聊天信息发出去
+//
+// 若配置为 1, 则会在发送者的聊天栏中显示编号为 2000 的信息
+//
+// 只有玩家尝试执行的指令确实是存在的, 才会给出提示消息,
+// 如果执行的是一个不存在的指令比如: @_@ 这样一个表情的话,
+// 还是能够被正常当做聊天信息发出去的.
+atcmd_no_permission: 1
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
