对信息数据文件进行清理和整理工作

--- a/conf/msg_conf/char_msg.conf
+++ b/conf/msg_conf/char_msg.conf
@@ -168,6 +168,15 @@
 228: Achievement Reward Mail
 229: [%s] Achievement Reward.
 
-// 熊猫模拟器拓展的信息配置文件
 // ==================================================
-import: conf/msg_conf/pandas_char_msg.conf
+// Pandas Extend Message - Begin
+// ==================================================
+
+// The default job name when establishing a guild.
+2000: GuildMaster
+2001: Position %d
+2002: Newbie
+
+// ==================================================
+// Pandas Extend Message - End
+// ==================================================
