--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1706,9 +1706,77 @@
 1503: You've entered a PK Zone.
 1504: You've entered a PK Zone (safe until level %d).
 
-// 熊猫模拟器拓展的信息配置文件
 // ==================================================
-import: conf/msg_conf/pandas_map_msg.conf
+// Pandas Extend Message - Begin
+// ==================================================
+
+// Battle Configure - atcmd_no_permission
+2000: You do not have permission to do this.
+
+// @recallmap
+2001: Summoned all players on the specified map!
+
+//2002 free
+
+// Battle Configure - cashmount_useitem_limit
+2003: Sorry, cannot use: %s when you get on the Cash Mount.
+
+// @title
+2012: Usage: @title <title_id>
+2013: The comparison table of title ID and title is located on the client: data\luafiles514\lua files\datainfo\titletable.lub
+2014: The title has been replaced.
+2015: The title has been cancelled.
+2016: Sorry, your client version (PACKETVER) is older than 20150513, cannot use this command.
+
+// Mapflag - notoken
+2017: This map prohibits resurrection in situ!
+
+// Mapflag - nocapture
+2018: Catch pet is prohibited on this map.
+
+// Battle Configure - show_mob_info
+2022: [%s]
+2023: Small
+2024: Medium
+2025: Large
+2026: [R:%s]
+2027: FoLe
+2028: Unde
+2029: Brut
+2030: Plan
+2031: Inse
+2032: Fish
+2033: Demo
+2034: DeHu
+2035: Ange
+2036: Drag
+2037: Play
+// 2038-2050 Reserved for new race
+
+// The 2051 message does not require square brackets,
+// because the client will add it on its own.
+2051: %s Lv.%d
+2052: Neut
+2053: Watr
+2054: Erth
+2055: Fire
+2056: Wind
+2057: Pois
+2058: Holy
+2059: Shdw
+2060: Ghos
+2061: Unde
+// 2062-2080 Reserved for new attributes
+
+// Mapflag - nomail
+2095: Mailbox is prohibited on this map!
+
+// @mapinfo
+2100: Pandas exclusive mapflag:
+
+// ==================================================
+// Pandas Extend Message - End
+// ==================================================
 
 //Custom translations
 import: conf/msg_conf/import/map_msg_eng_conf.txt
