--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -651,9 +651,9 @@ Body:
 - Original: "Create channel %s alias %s type=%d, owner=%d/%d/%d\n"
   Translation: ""
 - Original: "Created Guild %d - %s (Guild Master: %s)\n"
-  Translation: ""
+  Translation: "已建立公會 - 公會編號: %d, 公會名稱: %s, 會長名稱: %s\n"
 - Original: "Created char: account: %d, char: %d, slot: %d, name: %s\n"
-  Translation: "已建立角色: 賬號編號: %d, 角色編號: %d, 槽位編號: %d, 角色名稱: %s\n"
+  Translation: "已建立角色 - 賬號編號: %d, 角色編號: %d, 槽位編號: %d, 角色名稱: %s\n"
 - Original: "Creating Guild (%s)\n"
   Translation: ""
 - Original: "Current script:\n"
@@ -1081,7 +1081,7 @@ Body:
 - Original: "Message #%d not found for langtype %d.\n"
   Translation: ""
 - Original: "Messages file not found: %s\n"
-  Translation: ""
+  Translation: "無法找到訊息資料庫檔案: %s\n"
 - Original: "Missing %d right curlys at file '%s', line '%d'.\n"
   Translation: ""
 - Original: "Missing mandatory node \"%s\".\n"
@@ -2855,9 +2855,9 @@ Body:
 - Original: "instance_readdb_sub: TimeLimit must be an integer value for instance '%d', skipping...\n"
   Translation: ""
 - Original: "int_guild: Guild broken (%d)\n"
-  Translation: ""
+  Translation: "int_guild: 公會已被解散 (公會編號: %d)\n"
 - Original: "int_guild: Guild created (%d - %s)\n"
-  Translation: ""
+  Translation: "int_guild: 公會已被建立 (公會編號: %d - 公會名稱: %s)\n"
 - Original: "int_guild: GuildBasicInfoChange: Unknown type %d\n"
   Translation: ""
 - Original: "int_guild: GuildMemberInfoChange: Unknown type %d\n"
