--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -651,9 +651,9 @@ Body:
 - Original: "Create channel %s alias %s type=%d, owner=%d/%d/%d\n"
   Translation: ""
 - Original: "Created Guild %d - %s (Guild Master: %s)\n"
-  Translation: ""
+  Translation: "已创建公会 - 公会编号: %d, 公会名称: %s, 会长名称: %s\n"
 - Original: "Created char: account: %d, char: %d, slot: %d, name: %s\n"
-  Translation: "已创建角色: 账号编号: %d, 角色编号: %d, 槽位编号: %d, 角色名称: %s\n"
+  Translation: "已创建角色 - 账号编号: %d, 角色编号: %d, 槽位编号: %d, 角色名称: %s\n"
 - Original: "Creating Guild (%s)\n"
   Translation: ""
 - Original: "Current script:\n"
@@ -1081,7 +1081,7 @@ Body:
 - Original: "Message #%d not found for langtype %d.\n"
   Translation: ""
 - Original: "Messages file not found: %s\n"
-  Translation: ""
+  Translation: "无法找到消息数据库文件: %s\n"
 - Original: "Missing %d right curlys at file '%s', line '%d'.\n"
   Translation: ""
 - Original: "Missing mandatory node \"%s\".\n"
@@ -2855,9 +2855,9 @@ Body:
 - Original: "instance_readdb_sub: TimeLimit must be an integer value for instance '%d', skipping...\n"
   Translation: ""
 - Original: "int_guild: Guild broken (%d)\n"
-  Translation: ""
+  Translation: "int_guild: 公会已被解散 (公会编号: %d)\n"
 - Original: "int_guild: Guild created (%d - %s)\n"
-  Translation: ""
+  Translation: "int_guild: 公会已被创建 (公会编号: %d - 公会名称: %s)\n"
 - Original: "int_guild: GuildBasicInfoChange: Unknown type %d\n"
   Translation: ""
 - Original: "int_guild: GuildMemberInfoChange: Unknown type %d\n"
