对消息文件的引入层级和关系进行调整梳理

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1,3 +1,22 @@
+﻿//--------------------------------------------------------------
+// 熊猫模拟器 - 地图服务器消息文件
+//--------------------------------------------------------------
+// 此处的消息配置是英文原文. 请根据需要, 在文件末尾启用译文.
+// 
+// 请不要修改此文件, 任何的翻译都建议在以下 import 文件进行:
+// conf/msg_conf/import/map_msg_conf.txt
+// 
+// 格式说明
+// 消息编号: 最长 255 个字符的消息内容 (中文应该是 128 个字符)
+// 
+// 小技巧提示
+// 若某个 %s 的内容你不需要, 那么可以把它的长度改成 0, 隐藏它.
+// 做法是在百分号的右侧添加一个小数点和一个数字0, 例如: %.0s
+// 但是这个方式只有 %s 的字符串可以这么做, %d 的数字是不行的.
+// 
+// 此文件的末尾还有其他的说明信息, 您可以前往阅读参考.
+//--------------------------------------------------------------
+
 // rAthena msg_athena.conf
 // Message Configuration
 // For translation, just change msg here (second line), no need to modify source code,
@@ -1706,9 +1725,9 @@
 1503: You've entered a PK Zone.
 1504: You've entered a PK Zone (safe until level %d).
 
-// ==================================================
+// =============================================================
 // Pandas Extend Message - Begin
-// ==================================================
+// =============================================================
 
 // Battle Configure - atcmd_no_permission
 2000: You do not have permission to do this.
@@ -1774,9 +1793,22 @@
 // @mapinfo
 2100: Pandas exclusive mapflag:
 
-// ==================================================
+// =============================================================
 // Pandas Extend Message - End
-// ==================================================
+// =============================================================
 
-//Custom translations
-import: conf/msg_conf/import/map_msg_eng_conf.txt
+// 若希望使用简体中文环境, 请移除 map_msg_chs.conf 开头的 // 注释符
+// 并在 map_msg_chn.conf 繁体中文的 import 开头添加 // 注释符
+import: conf/msg_conf/map_msg_chs.conf
+
+// 若希望使用繁体中文环境, 请移除 map_msg_chs.conf 开头的 // 注释符
+// 并在 map_msg_chs.conf 简体中文的 import 开头添加 // 注释符
+//import: conf/msg_conf/map_msg_chn.conf
+
+// 若你对当前的消息翻译的不满意, 建议你不要对它们直接进行修改.
+// 而是直接前往以下 import 路径指定的文件, 把不满意的消息编号复制过去,
+// 在里面进行翻译. 地图服务器将优先使用 import 目录中配置的消息.
+//
+// 若按照以上建议操作, 那么未来消息文件被升级后
+// 你只需要保存之前在 import 目录中翻译过的结果, 直接覆盖即可
+import: conf/msg_conf/import/map_msg_conf.txt
