--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -667,7 +667,7 @@ Body:
 - Original: "DB error - data truncated (unknown source, columns are not bound)\n"
   Translation: "資料庫錯誤 - 資料已被截斷 (無法判斷來源, 欄位未繫結到變數)\n"
 - Original: "DB integrity check finished with success\n"
-  Translation: "已完成資料庫表格和欄位的完整性檢測, 若未報錯則表示檢測通過.\n"
+  Translation: "已完成資料庫表格和欄位的完整性檢測, 若未報錯則檢測通過.\n"
 - Original: "DNSBL: (%s) Blacklisted. User Kicked.\n"
   Translation: ""
 - Original: "Data: %s\n"
@@ -713,7 +713,7 @@ Body:
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
   Translation: "終端資訊翻譯診斷資訊: 語言資訊: %s | 位置編碼: %s\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
-  Translation: "已完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則表示檢測通過.\n"
+  Translation: "已經完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則檢測通過.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
