--- a/conf/msg_conf/login_msg_chn.conf
+++ b/conf/msg_conf/login_msg_chn.conf
@@ -1,3 +1,3 @@
 //--------------------------------------------------------------
-// 熊貓模擬器 - 地圖伺服器訊息文件 - 繁體中文版本
+// 熊貓模擬器 - 登陸伺服器訊息文件 - 繁體中文版本
 //--------------------------------------------------------------
