--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1,3 +1,3 @@
 //--------------------------------------------------------------
-// 旱窟家览竟 - 瓜狝竟癟ゅン - 羉砰いゅセ
+// 熊猫模拟器 - 地图服务器消息文件 - 简体中文版本
 //--------------------------------------------------------------
