--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -667,7 +667,7 @@ Body:
 - Original: "DB error - data truncated (unknown source, columns are not bound)\n"
   Translation: "数据库错误 - 数据已被截断 (无法判断来源, 字段未绑定到变量)\n"
 - Original: "DB integrity check finished with success\n"
-  Translation: "已完成数据库表格和字段的完整性检测, 若未报错则表示检测通过.\n"
+  Translation: "已完成数据库表格和字段的完整性检测, 若未报错则检测通过.\n"
 - Original: "DNSBL: (%s) Blacklisted. User Kicked.\n"
   Translation: ""
 - Original: "Data: %s\n"
@@ -713,7 +713,7 @@ Body:
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
   Translation: "终端信息翻译诊断信息: 语言信息: %s | 位置编码: %s\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
-  Translation: "已完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则表示检测通过.\n"
+  Translation: "已经完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则检测通过.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
