对熊猫模拟器拓展的字符串进行汉化, 添加编码建议

--- a/conf/msg_conf/char_msg.conf
+++ b/conf/msg_conf/char_msg.conf
@@ -1,5 +1,5 @@
 ﻿//--------------------------------------------------------------
-// 熊猫模拟器 - 角色服务器消息文件
+// 熊猫模拟器 - 角色服务器消息文件 - 英语原文
 //--------------------------------------------------------------
 // 此处的消息配置是英文原文. 请根据需要, 在文件末尾启用译文.
 // 
