--- a/conf/msg_conf/map_msg_chn.conf
+++ b/conf/msg_conf/map_msg_chn.conf
@@ -1,3 +1,13 @@
 //--------------------------------------------------------------
 // 熊貓模擬器 - 地圖伺服器訊息文件 - 繁體中文版本
 //--------------------------------------------------------------
+// 關於當前訊息檔案的編碼建議:
+// 
+// 若您的伺服器執行在繁體中文系統上, 那麼當前檔案的可選編碼為:
+// UTF8-BOM 或 ANSI 類別的 BIG5
+// 
+// 若不是, 那麼請維持在 ANSI 類別的 BIG5 (建議)
+// 
+// 因為熊貓模擬器碰到 UTF8-BOM 編碼時, 會在檔案讀取時進行轉碼,
+// 而轉換的目標編碼與運行伺服器的作業系統語言有關係
+//--------------------------------------------------------------
